# plex-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README  discussion.txt  plexdownloader.service  pseudocode.txt  run.sh  transfer_to_plex
src/: main.rs
