[package]
name = "plex-downloader"
version = "0.1.0"
authors = ["stuart nelson <stuartnelson3@gmail.com>"]

[dependencies]
env_logger = "0.5.3"
futures = "0.1.18"
log = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
urlencoding = "1.0"
clap = "2.31.0"
actix = "0.5.6"
actix-web = "0.5.6"
prometheus = "0.4"
