[package]
name = "plex-downloader"
version = "0.1.0"
edition = "2018"
authors = ["stuart nelson <stuartnelson3@gmail.com>"]

[dependencies]
env_logger = "^0.7"
log = "^0.4"
urlencoding = "^1.0"
clap = "^2.33"
actix-web = "^2.0"
actix-rt = "^1.0"
prometheus = "^0.7"
ssh2 = "^0.8"
crossbeam = "^0.7"
num_cpus = "^1.13"

serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
